modified pipeline and mvn should work