@@ -77,7 +77,40 @@
 
     </dependencies>
     <build>
+
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>set-maven-opts</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <exec executable="sh">
+                                    <arg value="-c"/>
+                                    <arg value="export MAVEN_OPTS='--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+                                    --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED'" />
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -93,6 +126,7 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
+
                         <arg>-Xplugin:ImageAccessPlugin</arg>
                     </compilerArgs>
                 </configuration>
